--- a/MVC-Project/MVC-Project.csproj
+++ b/MVC-Project/MVC-Project.csproj
@@ -49,6 +49,8 @@
     <None Remove="Areas\Admin\Views\Dashboard\" />
     <None Remove="ViewModels\Account\" />
     <None Remove="Views\Account\" />
+    <None Remove="Areas\Admin\Views\Slider\" />
+    <None Remove="ViewModels\Slider\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -78,5 +80,7 @@
     <Folder Include="Areas\Admin\Views\Dashboard\" />
     <Folder Include="ViewModels\Account\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Areas\Admin\Views\Slider\" />
+    <Folder Include="ViewModels\Slider\" />
   </ItemGroup>
 </Project>
