--- a/MVC-Project/MVC-Project.csproj
+++ b/MVC-Project/MVC-Project.csproj
@@ -61,6 +61,10 @@
     <None Remove="Areas\Admin\Views\Setting\" />
     <None Remove="ViewModels\Social\" />
     <None Remove="Areas\Admin\Views\Social\" />
+    <None Remove="ViewModels\Course\" />
+    <None Remove="Areas\Admin\Views\Course\" />
+    <None Remove="ViewModels\Instructor\" />
+    <None Remove="Areas\Admin\Views\Instructor\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -102,5 +106,9 @@
     <Folder Include="Areas\Admin\Views\Setting\" />
     <Folder Include="ViewModels\Social\" />
     <Folder Include="Areas\Admin\Views\Social\" />
+    <Folder Include="ViewModels\Course\" />
+    <Folder Include="Areas\Admin\Views\Course\" />
+    <Folder Include="ViewModels\Instructor\" />
+    <Folder Include="Areas\Admin\Views\Instructor\" />
   </ItemGroup>
 </Project>
